--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="d-flex flex-wrap justify-content-between">
                 <div class="right-side order-2 order-md-1">
                     <div class="right-side-img">
-                        <img src="assets/imgs/home-2.jpeg" class="img-fluid">
+                        <img id="main-image" src="assets/imgs/home-2.jpeg" class="img-fluid">
                         <div class="img-text">
                             <h4>%20 خصم</h4>
                             <p>علي جميع الفساتين</p>
@@ -158,8 +158,7 @@
                             </button>
                         </div>
                     </div>
-
-
+        
                     <div class="owl-carousel owl-theme">
                         <div class="item">
                             <img src="assets/imgs/home-1.jpeg">
@@ -183,13 +182,13 @@
                             <img src="assets/imgs/home-1.jpeg">
                         </div>
                     </div>
-
                 </div>
                 <div class="left-side order-1 order-md-2 mb-md-0 mb-4">
                     <img src="assets/imgs/home-1.jpeg" class="img-fluid">
                 </div>
             </div>
         </section>
+        
 
         <!-- SECTION 3 -->
         <section class="sec-3 container mb-5">
